updated base url to env variable